--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,5 @@
-.App {
+/* .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -30,4 +21,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
